--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -131,4 +131,7 @@
 
     <!-- Lineage clock -->
     <string name="clock_title_lineage" translatable="false">LineageOS</string>
+
+    <!-- Restart SystemUI via Advanced Power Menu -->
+    <string name="global_action_restart_systemui">SystemUI</string>
 </resources>
