Bring back Gaming mode [1/3]
This is a squash commit with major contributions by
@PMS22, @ishubhamsingh, @DennySPB, @neobuddy89

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

--- a/core/res/res/values/lineage_symbols.xml
+++ b/core/res/res/values/lineage_symbols.xml
@@ -67,4 +67,13 @@
 
   <!-- Post reset runnable for all clients -->
   <java-symbol type="array" name="config_blockPackagesSensorDrain" />
+
+  <!-- Gaming mode -->
+  <java-symbol type="drawable" name="ic_gaming_notif" />
+  <java-symbol type="string" name="notification_channel_gaming" />
+  <java-symbol type="string" name="gaming_mode_notification_title" />
+  <java-symbol type="string" name="gaming_mode_notification_content" />
+  <java-symbol type="string" name="gaming_mode_enabled_toast" />
+  <java-symbol type="string" name="gaming_mode_disabled_toast" />
+
 </resources>
