SystemUI: Add VoLTE switch in tuner
Change-Id: Ib95ec631bb89be34cf0ab6ccac31a2da0900e020
Signed-off-by: Sujit Roy <kumarsujitroy@gmail.com>
Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

--- a/packages/SystemUI/res/values/cm_strings.xml
+++ b/packages/SystemUI/res/values/cm_strings.xml
@@ -134,4 +134,7 @@
 
     <!-- Restart SystemUI via Advanced Power Menu -->
     <string name="global_action_restart_systemui">SystemUI</string>
+
+    <!-- Name of the volte status bar icon. -->
+    <string name="status_bar_volte">VoLTE</string>
 </resources>
