--- a/packages/SystemUI/res/xml/status_bar_prefs.xml
+++ b/packages/SystemUI/res/xml/status_bar_prefs.xml
@@ -90,6 +90,15 @@
         android:key="battery"
         android:title="@string/status_bar_battery" />
 
+    <com.android.systemui.tuner.TunerSwitch
+        android:key="volte"
+        android:title="@string/status_bar_volte"
+        sysui:defValue="true" />
+
+    <com.android.systemui.tuner.StatusBarSwitch
+        android:key="battery"
+        android:title="@string/status_bar_battery" />
+
     <com.android.systemui.tuner.StatusBarSwitch
         android:key="alarm_clock"
         android:title="@string/status_bar_alarm" />
