fwb: OOS styled dismiss all button [1/2]
This is a SQUASH of following commits :-

- OxygenOS styled dismiss all button [1/2]

showing animation might glitch if previous hiding animation was canceled before it finished and set visibility of button to View.GONE
thats the reason why hiding animation is so short

Before someone will run saying its kang of @imjyotiraditya solution
I actually didn't know it was already done by him so i created my own solution
we both looked at oxygenos code to see how it was made so thats why our code is simillar

Signed-off-by: 00day0 <therandomuser11@gmail.com>

- OxygenOS dismiss all: disable animations and disable it by default

Signed-off-by: 00day0 <therandomuser11@gmail.com>

- OxygenOS dismiss all: animate it
todo: cleanup of all this mess

instead of all this mess with scaling animation lets just switch opacity based on how much panel is expanded
animation gets in sync with future qs blur animation + it doesnt rely on these damnn checks if panel is fully expanded etc etc etc

Signed-off-by: 00day0 <therandomuser11@gmail.com>

- Enable oxygenos dismiss all by default
i sorted out problems with animations almost completly so why not enable it by default

Signed-off-by: 00day0 <therandomuser11@gmail.com>

- Fix oxygenos dismiss all appearing when there arent any notifications to dimiss

Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: Id303df90f032235b074cd63d4877509006ce3079

- Add ripple effect to oos dismiss all

Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: I17099c48e835d18ba87bf48e454a8e5e6f75921e
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>
Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -1160,8 +1160,22 @@
     <dimen name="config_rounded_mask_size_top">@*android:dimen/rounded_corner_radius_top</dimen>
     <dimen name="config_rounded_mask_size_bottom">@*android:dimen/rounded_corner_radius_top</dimen>
 
+    <!-- volume dialog -->
+    <dimen name="custom_volume_dialog_seekbar_width">40dip</dimen>
+    <dimen name="custom_volume_dialog_seekbar_height">220dip</dimen>
+    <dimen name="volume_dialog_row_icon_margintop">-58dp</dimen>
+    <dimen name="volume_dialog_rows_padding_right">0.5dip</dimen>
+    <dimen name="volume_dialog_ringer_spacing">4dip</dimen>
+    <dimen name="volume_dialog_ringer_height">38dip</dimen>
     <dimen name="lockscreen_shortcuts_preview_paddingVertical">30dp</dimen>
     <dimen name="lockscreen_shortcuts_preview_paddingHorizontal">50dp</dimen>
     <dimen name="keyguard_affordance_icon_preview_padding">15dp</dimen>
 
+    <!--OOS dismiss all-->
+    <dimen name="dismiss_all_button_elevation">10dp</dimen>
+    <dimen name="dismiss_all_button_height">55dp</dimen>
+    <dimen name="dismiss_all_button_margin_bottom">35dp</dimen>
+    <dimen name="dismiss_all_button_margin_top">30dp</dimen>
+    <dimen name="dismiss_all_button_width">55dp</dimen>
+    <dimen name="dismiss_all_fab_src_size">24dp</dimen>
 </resources>
