--- a/packages/SystemUI/res/values-night/colors.xml
+++ b/packages/SystemUI/res/values-night/colors.xml
@@ -86,6 +86,10 @@
     <color name="keyguard_affordance_background_preview">#171717</color>
     <color name="keyguard_affordance_background_preview_background">#242426</color>
     <color name="volume_background_tint">#141414</color>
-
     <color name="divider_stroke_color">#434343</color>
+
+    <!-- OOS Recent Clearall -->
+    <color name="recents_dismiss_all_background_color">@color/GM2_grey_900</color>
+    <color name="recents_dismiss_all_background_color_ripple">#555555</color>
+    <color name="recents_dismiss_all_icon_color">@android:color/white</color>
 </resources>
