--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -408,7 +408,7 @@
 
     <dimen name="volume_dialog_ringer_icon_padding">20dp</dimen>
 
-    <dimen name="volume_dialog_caption_size">64dp</dimen>
+    <dimen name="volume_dialog_caption_size">@dimen/volume_dialog_ringer_size</dimen>
 
     <dimen name="volume_dialog_tap_target_size">48dp</dimen>
 
