Volume panel: Adjust the left padding
When the volume panel is forced on the left for certain devices, the
padding on the left does not match that of the power menu. This commit
fixes that by exposing the padding on the left so that it can be overlay'd
by devices that need it.

<dimen name="volume_dialog_panel_transparent_padding_left">4dp</dimen>

Change-Id: Iea4ff2f31a96aaf2f31b537e09646b3146a74943
Signed-off-by: Sujit Roy <kumarsujitroy@gmail.com>
Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

--- a/packages/SystemUI/res/values/lineage_dimens.xml
+++ b/packages/SystemUI/res/values/lineage_dimens.xml
@@ -34,4 +34,6 @@
     <dimen name="qs_header_image_top_margin">4dp</dimen>
     <dimen name="qs_header_image_bottom_margin">4dp</dimen>
 
+    <!-- Volume panel -->
+    <dimen name="volume_dialog_panel_transparent_padding_left">20dp</dimen>
 </resources>
