--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -113,7 +113,7 @@
             android:id="@+id/network_traffic_holder"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="start|center_vertical"
+            android:gravity="center_vertical|end"
             >
 
             <org.lineageos.internal.statusbar.NetworkTraffic
@@ -121,7 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:maxLines="2"
-                android:gravity="center_vertical|start" />
+                android:gravity="center_vertical|end" />
 
         </com.android.systemui.statusbar.LineageStatusBarItemHolder>
 
