Revert some changes [Squash]
Revert "android.view: Speed things up!!"

This reverts commit 5f5ab1a35061ae95c5da1f94dee2d06a4c2f1ab7.

Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

Revert "[1/2] base: Remove restrictions for system audio record"

This reverts commit f695fc5cce25f842c63ccc96d9a32f5cdb818f38.

Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

Revert "ScreenshotSound: Fix playing screenshot's sound when camera's sounds off."

This reverts commit fd24d2b37f50b92f1857e43dd23e4eda89a751a6.

Signed-off-by: LordShenron <shen.priyanshu@gmail.com>

--- a/core/res/res/values/sakura_colors.xml
+++ b/core/res/res/values/sakura_colors.xml
@@ -16,6 +16,9 @@
     <!-- Themes -->
     <color name="theme_generic_semi_transparent_color">#EAFFFFFF</color>
 
+    <!-- Bootleg unneccesary gradient declaration | Just for our shishu bars -->
+    <color name="bootleg_accent_gradient_end_color">#00000000</color>
+
     <!-- Mizu -->
     <color name="theme_background_mizu">#ae000000</color>
 
