--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -754,7 +754,7 @@
     <bool name="config_automatic_brightness_available">false</bool>
 
     <!-- Flag indicating whether we should enable the adaptive sleep.-->
-    <bool name="config_adaptive_sleep_available">false</bool>
+    <bool name="config_adaptive_sleep_available">true</bool>
 
     <!-- Flag indicating whether we should enable smart battery. -->
     <bool name="config_smart_battery_available">false</bool>
